# sleap_video_analysis

./: .gitignore  CLAUDE.md  analysis.ipynb  braidz_analysis.ipynb  convert_slp_to_csv.sh  env.yml  environment.yml  extract_stimulus_heading_for_camera.py  opencv_test.ipynb  pyproject.toml  video_analysis.ipynb
canton-s/: 20241121_151406.csv  20241126_171308.csv  20241130_161634.csv  20250102_152013.csv  20250110_142709.csv  20250111_151946.csv  20250410_120718.csv  20250411_175919.csv  20250421_174810.csv  20250422_171703.csv  20250425_195715.csv
canton-s/20241126_171308/: obj_id_3584_frame_1449463.predictions.csv  obj_id_3598_frame_1625169.predictions.csv  obj_id_3606_frame_1630270.predictions.csv  obj_id_3610_frame_1646390.predictions.csv  obj_id_3615_frame_1649124.predictions.csv  obj_id_3863_frame_4533593.predictions.csv
data/: 20241112_124059.csv  20241114_173118.csv  20241116_154109.csv  20241121_151406.csv  20241125_132912.csv  20241126_171308.csv  20241127_152044.csv  20241129_144233.csv  20241130_161634.csv  20250102_152013.csv  20250106_153631.csv  20250108_160315.csv  20250110_142709.csv  20250111_151946.csv  20250410_120718.csv  20250411_175919.csv  20250421_174810.csv  20250422_171703.csv  20250425_195715.csv  20250427_170153.csv  20250428_171938.csv  20250429_193010.csv  20250430_155345.csv  20250501_183152.csv  20250502_171825.csv  20250504_191950.csv
native/: 20241112_124059.csv  20241114_173118.csv  20241116_154109.csv  20241125_132912.csv  20241127_152044.csv  20241129_144233.csv  20250106_153631.csv  20250108_160315.csv
(+3075 files in other folders)
