[project]
name = "sleap-video-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.13.0",
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=1.24.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pynumdiff>=0.1.2",
    "scikit-learn>=1.0.2",
    "scipy>=1.10.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
]
