[project]
name = "sleap-video-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.5.3",
    "natsort>=8.4.0",
    "numpy>=1.21.6",
    "pandas>=1.1.5",
    "pynumdiff>=0.1.2",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
    "sleap[pypi]>=1.4.1",
    "tqdm>=4.67.1",
    "tslearn>=0.6.3",
    "umap-learn>=0.5.7",
]
